--- a/css/gbRemake.css
+++ b/css/gbRemake.css
@@ -576,6 +576,14 @@
     .btnFixfs {
         font-size: 12px !important;
     }
+}@media only screen and (max-width: 375px) { 
+    .pl-0-w375 {
+        padding-left: 0px;
+    }
+
+    .w100-w375 {
+        width: 100% !important;
+    }
 }
 
 
